hard-gists/3141140/run.log
=== Docker Run Log for 3141140 ===
Started at: Mi 29. Okt 13:42:15 CET 2025

[2025-10-29 13:42:15] START: Running container for 3141140
[2025-10-29 13:42:16] SUCCESS: Container 80db77e8655c08284943c73719ccce0a85e7c39c621e4680babffdcf55d3bf58 started for 3141140
=== Container logs for 3141140 ===
  File "/snippet.py", line 11
    print "Usage: python PNGPNGAlphaTrim.py ../someFolder"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3141140 ===
[2025-10-29 13:42:18] INFO: Container 80db77e8655c08284943c73719ccce0a85e7c39c621e4680babffdcf55d3bf58 has stopped
